force-app/main/default/objects/OneJN_Event_Log__c/OneJN_Event_Log__c.object-meta.xml
<CustomObject>
    <description>stores all platform events related to one jn.</description>
    <label>OneJN Event Log</label>
    <nameField>
        <displayFormat>OJE-{0000}</displayFormat>
        <label>OneJN Event Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OneJN Events Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>