force-app/main/default/objects/OneJN_Event_Log__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Payload</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>