force-app/main/default/objects/OneJN_Event_Log__c/fields/External_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Record_Id__c</fullName>
    <description>External Record Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>