force-app/main/default/objects/OneJN_Event_Log__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>event type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>