force-app/main/default/objects/OneJN_Event_Log__c/fields/Salesforce_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Record_Id__c</fullName>
    <description>Salesforce Record Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>