force-app/main/default/objects/OneJN_Event_Log__c/listViews/External.listView-meta.xml
<ListView>
    <fullName>External</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Source__c</field>
        <operation>equals</operation>
        <value>External</value>
    </filters>
    <label>External</label>
</ListView>