force-app/main/default/objects/OneJN_Event_Log__c/listViews/Internal.listView-meta.xml
<ListView>
    <fullName>Internal</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Source__c</field>
        <operation>equals</operation>
        <value>Internal</value>
    </filters>
    <label>Internal</label>
</ListView>